lib/scotch_6.1.0/src/libscotch/y.output
Terminals unused in grammar

    VALSTRAT
    VALPARAM
    VALTEST


문법

    0 $accept: STRAT $end

    1 STRAT: STRATSELECT

    2 STRATSELECT: STRATSELECT '|' STRATEMPTY
    3            | STRATEMPTY

    4 STRATEMPTY: STRATCONCAT
    5           | %empty

    6 STRATCONCAT: STRATCONCAT STRATTEST
    7            | STRATTEST

    8 $@1: %empty

    9 $@2: %empty

   10 STRATTEST: $@1 '/' TEST $@2 '?' STRATSELECT STRATTESTELSE ';'
   11          | STRATGROUP

   12 STRATTESTELSE: ':' STRATSELECT
   13              | %empty

   14 STRATGROUP: '(' STRATSELECT ')'
   15           | STRATMETHOD

   16 $@3: %empty

   17 STRATMETHOD: METHODNAME $@3 METHODPARAM

   18 $@4: %empty

   19 $@5: %empty

   20 METHODPARAM: $@4 '{' PARAMLIST $@5 '}'
   21            | %empty

   22 PARAMLIST: PARAMLIST ',' PARAMPARAM
   23          | PARAMPARAM

   24 @6: %empty

   25 PARAMPARAM: PARAMNAME @6 '=' PARAMVAL

   26 PARAMVAL: VALCASE
   27         | VALSDOUBLE
   28         | VALSINT
   29         | VALSTRING

   30 @7: %empty

   31 PARAMVAL: @7 STRATSELECT
   32         | error

   33 TEST: TESTOR

   34 TESTOR: TESTOR '|' TESTAND
   35       | TESTAND

   36 TESTAND: TESTAND '&' TESTNOT
   37        | TESTNOT

   38 TESTNOT: '!' TESTNOT
   39        | '(' TESTOR ')'
   40        | TESTREL

   41 TESTREL: TESTEXPR1 TESTRELOP TESTEXPR1

   42 TESTRELOP: '<'
   43          | '='
   44          | '>'

   45 TESTEXPR1: TESTEXPR1 TESTEXPR1OP TESTEXPR2
   46          | TESTEXPR2

   47 TESTEXPR1OP: '+'
   48            | '-'

   49 TESTEXPR2: TESTEXPR2 TESTEXPR2OP TESTEXPR3
   50          | TESTEXPR3

   51 TESTEXPR2OP: '*'

   52 TESTEXPR3: TESTEXPR3 TESTEXPR3OP TESTEXPR4
   53          | TESTEXPR4

   54 TESTEXPR3OP: '%'

   55 TESTEXPR4: '(' TESTEXPR1 ')'
   56          | TESTVAL
   57          | TESTVAR

   58 TESTVAL: VALSDOUBLE
   59        | VALSINT

   60 TESTVAR: PARAMNAME

   61 VALSDOUBLE: TESTEXPR1OP VALDOUBLE
   62           | VALDOUBLE

   63 VALSINT: TESTEXPR1OP VALINT
   64        | VALINT


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 38
    '%' (37) 54
    '&' (38) 36
    '(' (40) 14 39 55
    ')' (41) 14 39 55
    '*' (42) 51
    '+' (43) 47
    ',' (44) 22
    '-' (45) 48
    '/' (47) 10
    ':' (58) 12
    ';' (59) 10
    '<' (60) 42
    '=' (61) 25 43
    '>' (62) 44
    '?' (63) 10
    '{' (123) 20
    '|' (124) 2 34
    '}' (125) 20
    error (256) 32
    METHODNAME <STRING> (258) 17
    PARAMNAME <STRING> (259) 25 60
    VALCASE <CASEVAL> (260) 26
    VALDOUBLE <DOUBLE> (261) 61 62
    VALINT <INTEGER> (262) 63 64
    VALSTRING <STRING> (263) 29
    VALSTRAT (264)
    VALPARAM (265)
    VALTEST (266)


Nonterminals, with rules where they appear

    $accept (31)
        on left: 0
    STRAT (32)
        on left: 1
        on right: 0
    STRATSELECT <STRAT> (33)
        on left: 2 3
        on right: 1 2 10 12 14 31
    STRATEMPTY <STRAT> (34)
        on left: 4 5
        on right: 2 3
    STRATCONCAT <STRAT> (35)
        on left: 6 7
        on right: 4 6
    STRATTEST <STRAT> (36)
        on left: 10 11
        on right: 6 7
    $@1 (37)
        on left: 8
        on right: 10
    $@2 (38)
        on left: 9
        on right: 10
    STRATTESTELSE <STRAT> (39)
        on left: 12 13
        on right: 10
    STRATGROUP <STRAT> (40)
        on left: 14 15
        on right: 11
    STRATMETHOD <STRAT> (41)
        on left: 17
        on right: 15
    $@3 (42)
        on left: 16
        on right: 17
    METHODPARAM (43)
        on left: 20 21
        on right: 17
    $@4 (44)
        on left: 18
        on right: 20
    $@5 (45)
        on left: 19
        on right: 20
    PARAMLIST (46)
        on left: 22 23
        on right: 20 22
    PARAMPARAM (47)
        on left: 25
        on right: 22 23
    @6 (48)
        on left: 24
        on right: 25
    PARAMVAL (49)
        on left: 26 27 28 29 31 32
        on right: 25
    @7 (50)
        on left: 30
        on right: 31
    TEST <TEST> (51)
        on left: 33
        on right: 10
    TESTOR <TEST> (52)
        on left: 34 35
        on right: 33 34 39
    TESTAND <TEST> (53)
        on left: 36 37
        on right: 34 35 36
    TESTNOT <TEST> (54)
        on left: 38 39 40
        on right: 36 37 38
    TESTREL <TEST> (55)
        on left: 41
        on right: 40
    TESTRELOP <TESTOP> (56)
        on left: 42 43 44
        on right: 41
    TESTEXPR1 <TEST> (57)
        on left: 45 46
        on right: 41 45 55
    TESTEXPR1OP <TESTOP> (58)
        on left: 47 48
        on right: 45 61 63
    TESTEXPR2 <TEST> (59)
        on left: 49 50
        on right: 45 46 49
    TESTEXPR2OP <TESTOP> (60)
        on left: 51
        on right: 49
    TESTEXPR3 <TEST> (61)
        on left: 52 53
        on right: 49 50 52
    TESTEXPR3OP <TESTOP> (62)
        on left: 54
        on right: 52
    TESTEXPR4 <TEST> (63)
        on left: 55 56 57
        on right: 52 53
    TESTVAL <TEST> (64)
        on left: 58 59
        on right: 56
    TESTVAR <TEST> (65)
        on left: 60
        on right: 57
    VALSDOUBLE <DOUBLE> (66)
        on left: 61 62
        on right: 27 58
    VALSINT <INTEGER> (67)
        on left: 63 64
        on right: 28 59


State 0

    0 $accept: . STRAT $end

    METHODNAME  shift, and go to state 1
    '('         shift, and go to state 2

    '/'       reduce using rule 8 ($@1)
    $default  reduce using rule 5 (STRATEMPTY)

    STRAT        go to state 3
    STRATSELECT  go to state 4
    STRATEMPTY   go to state 5
    STRATCONCAT  go to state 6
    STRATTEST    go to state 7
    $@1          go to state 8
    STRATGROUP   go to state 9
    STRATMETHOD  go to state 10


State 1

   17 STRATMETHOD: METHODNAME . $@3 METHODPARAM

    $default  reduce using rule 16 ($@3)

    $@3  go to state 11


State 2

   14 STRATGROUP: '(' . STRATSELECT ')'

    METHODNAME  shift, and go to state 1
    '('         shift, and go to state 2

    '/'       reduce using rule 8 ($@1)
    $default  reduce using rule 5 (STRATEMPTY)

    STRATSELECT  go to state 12
    STRATEMPTY   go to state 5
    STRATCONCAT  go to state 6
    STRATTEST    go to state 7
    $@1          go to state 8
    STRATGROUP   go to state 9
    STRATMETHOD  go to state 10


State 3

    0 $accept: STRAT . $end

    $end  shift, and go to state 13


State 4

    1 STRAT: STRATSELECT .
    2 STRATSELECT: STRATSELECT . '|' STRATEMPTY

    '|'  shift, and go to state 14

    $default  reduce using rule 1 (STRAT)


State 5

    3 STRATSELECT: STRATEMPTY .

    $default  reduce using rule 3 (STRATSELECT)


State 6

    4 STRATEMPTY: STRATCONCAT .
    6 STRATCONCAT: STRATCONCAT . STRATTEST

    METHODNAME  shift, and go to state 1
    '('         shift, and go to state 2

    '/'       reduce using rule 8 ($@1)
    $default  reduce using rule 4 (STRATEMPTY)

    STRATTEST    go to state 15
    $@1          go to state 8
    STRATGROUP   go to state 9
    STRATMETHOD  go to state 10


State 7

    7 STRATCONCAT: STRATTEST .

    $default  reduce using rule 7 (STRATCONCAT)


State 8

   10 STRATTEST: $@1 . '/' TEST $@2 '?' STRATSELECT STRATTESTELSE ';'

    '/'  shift, and go to state 16


State 9

   11 STRATTEST: STRATGROUP .

    $default  reduce using rule 11 (STRATTEST)


State 10

   15 STRATGROUP: STRATMETHOD .

    $default  reduce using rule 15 (STRATGROUP)


State 11

   17 STRATMETHOD: METHODNAME $@3 . METHODPARAM

    '{'       reduce using rule 18 ($@4)
    $default  reduce using rule 21 (METHODPARAM)

    METHODPARAM  go to state 17
    $@4          go to state 18


State 12

    2 STRATSELECT: STRATSELECT . '|' STRATEMPTY
   14 STRATGROUP: '(' STRATSELECT . ')'

    '|'  shift, and go to state 14
    ')'  shift, and go to state 19


State 13

    0 $accept: STRAT $end .

    $default  accept


State 14

    2 STRATSELECT: STRATSELECT '|' . STRATEMPTY

    METHODNAME  shift, and go to state 1
    '('         shift, and go to state 2

    '/'       reduce using rule 8 ($@1)
    $default  reduce using rule 5 (STRATEMPTY)

    STRATEMPTY   go to state 20
    STRATCONCAT  go to state 6
    STRATTEST    go to state 7
    $@1          go to state 8
    STRATGROUP   go to state 9
    STRATMETHOD  go to state 10


State 15

    6 STRATCONCAT: STRATCONCAT STRATTEST .

    $default  reduce using rule 6 (STRATCONCAT)


State 16

   10 STRATTEST: $@1 '/' . TEST $@2 '?' STRATSELECT STRATTESTELSE ';'

    PARAMNAME  shift, and go to state 21
    VALDOUBLE  shift, and go to state 22
    VALINT     shift, and go to state 23
    '('        shift, and go to state 24
    '!'        shift, and go to state 25
    '+'        shift, and go to state 26
    '-'        shift, and go to state 27

    TEST         go to state 28
    TESTOR       go to state 29
    TESTAND      go to state 30
    TESTNOT      go to state 31
    TESTREL      go to state 32
    TESTEXPR1    go to state 33
    TESTEXPR1OP  go to state 34
    TESTEXPR2    go to state 35
    TESTEXPR3    go to state 36
    TESTEXPR4    go to state 37
    TESTVAL      go to state 38
    TESTVAR      go to state 39
    VALSDOUBLE   go to state 40
    VALSINT      go to state 41


State 17

   17 STRATMETHOD: METHODNAME $@3 METHODPARAM .

    $default  reduce using rule 17 (STRATMETHOD)


State 18

   20 METHODPARAM: $@4 . '{' PARAMLIST $@5 '}'

    '{'  shift, and go to state 42


State 19

   14 STRATGROUP: '(' STRATSELECT ')' .

    $default  reduce using rule 14 (STRATGROUP)


State 20

    2 STRATSELECT: STRATSELECT '|' STRATEMPTY .

    $default  reduce using rule 2 (STRATSELECT)


State 21

   60 TESTVAR: PARAMNAME .

    $default  reduce using rule 60 (TESTVAR)


State 22

   62 VALSDOUBLE: VALDOUBLE .

    $default  reduce using rule 62 (VALSDOUBLE)


State 23

   64 VALSINT: VALINT .

    $default  reduce using rule 64 (VALSINT)


State 24

   39 TESTNOT: '(' . TESTOR ')'
   55 TESTEXPR4: '(' . TESTEXPR1 ')'

    PARAMNAME  shift, and go to state 21
    VALDOUBLE  shift, and go to state 22
    VALINT     shift, and go to state 23
    '('        shift, and go to state 24
    '!'        shift, and go to state 25
    '+'        shift, and go to state 26
    '-'        shift, and go to state 27

    TESTOR       go to state 43
    TESTAND      go to state 30
    TESTNOT      go to state 31
    TESTREL      go to state 32
    TESTEXPR1    go to state 44
    TESTEXPR1OP  go to state 34
    TESTEXPR2    go to state 35
    TESTEXPR3    go to state 36
    TESTEXPR4    go to state 37
    TESTVAL      go to state 38
    TESTVAR      go to state 39
    VALSDOUBLE   go to state 40
    VALSINT      go to state 41


State 25

   38 TESTNOT: '!' . TESTNOT

    PARAMNAME  shift, and go to state 21
    VALDOUBLE  shift, and go to state 22
    VALINT     shift, and go to state 23
    '('        shift, and go to state 24
    '!'        shift, and go to state 25
    '+'        shift, and go to state 26
    '-'        shift, and go to state 27

    TESTNOT      go to state 45
    TESTREL      go to state 32
    TESTEXPR1    go to state 33
    TESTEXPR1OP  go to state 34
    TESTEXPR2    go to state 35
    TESTEXPR3    go to state 36
    TESTEXPR4    go to state 37
    TESTVAL      go to state 38
    TESTVAR      go to state 39
    VALSDOUBLE   go to state 40
    VALSINT      go to state 41


State 26

   47 TESTEXPR1OP: '+' .

    $default  reduce using rule 47 (TESTEXPR1OP)


State 27

   48 TESTEXPR1OP: '-' .

    $default  reduce using rule 48 (TESTEXPR1OP)


State 28

   10 STRATTEST: $@1 '/' TEST . $@2 '?' STRATSELECT STRATTESTELSE ';'

    $default  reduce using rule 9 ($@2)

    $@2  go to state 46


State 29

   33 TEST: TESTOR .
   34 TESTOR: TESTOR . '|' TESTAND

    '|'  shift, and go to state 47

    $default  reduce using rule 33 (TEST)


State 30

   35 TESTOR: TESTAND .
   36 TESTAND: TESTAND . '&' TESTNOT

    '&'  shift, and go to state 48

    $default  reduce using rule 35 (TESTOR)


State 31

   37 TESTAND: TESTNOT .

    $default  reduce using rule 37 (TESTAND)


State 32

   40 TESTNOT: TESTREL .

    $default  reduce using rule 40 (TESTNOT)


State 33

   41 TESTREL: TESTEXPR1 . TESTRELOP TESTEXPR1
   45 TESTEXPR1: TESTEXPR1 . TESTEXPR1OP TESTEXPR2

    '='  shift, and go to state 49
    '<'  shift, and go to state 50
    '>'  shift, and go to state 51
    '+'  shift, and go to state 26
    '-'  shift, and go to state 27

    TESTRELOP    go to state 52
    TESTEXPR1OP  go to state 53


State 34

   61 VALSDOUBLE: TESTEXPR1OP . VALDOUBLE
   63 VALSINT: TESTEXPR1OP . VALINT

    VALDOUBLE  shift, and go to state 54
    VALINT     shift, and go to state 55


State 35

   46 TESTEXPR1: TESTEXPR2 .
   49 TESTEXPR2: TESTEXPR2 . TESTEXPR2OP TESTEXPR3

    '*'  shift, and go to state 56

    $default  reduce using rule 46 (TESTEXPR1)

    TESTEXPR2OP  go to state 57


State 36

   50 TESTEXPR2: TESTEXPR3 .
   52 TESTEXPR3: TESTEXPR3 . TESTEXPR3OP TESTEXPR4

    '%'  shift, and go to state 58

    $default  reduce using rule 50 (TESTEXPR2)

    TESTEXPR3OP  go to state 59


State 37

   53 TESTEXPR3: TESTEXPR4 .

    $default  reduce using rule 53 (TESTEXPR3)


State 38

   56 TESTEXPR4: TESTVAL .

    $default  reduce using rule 56 (TESTEXPR4)


State 39

   57 TESTEXPR4: TESTVAR .

    $default  reduce using rule 57 (TESTEXPR4)


State 40

   58 TESTVAL: VALSDOUBLE .

    $default  reduce using rule 58 (TESTVAL)


State 41

   59 TESTVAL: VALSINT .

    $default  reduce using rule 59 (TESTVAL)


State 42

   20 METHODPARAM: $@4 '{' . PARAMLIST $@5 '}'

    PARAMNAME  shift, and go to state 60

    PARAMLIST   go to state 61
    PARAMPARAM  go to state 62


State 43

   34 TESTOR: TESTOR . '|' TESTAND
   39 TESTNOT: '(' TESTOR . ')'

    '|'  shift, and go to state 47
    ')'  shift, and go to state 63


State 44

   41 TESTREL: TESTEXPR1 . TESTRELOP TESTEXPR1
   45 TESTEXPR1: TESTEXPR1 . TESTEXPR1OP TESTEXPR2
   55 TESTEXPR4: '(' TESTEXPR1 . ')'

    ')'  shift, and go to state 64
    '='  shift, and go to state 49
    '<'  shift, and go to state 50
    '>'  shift, and go to state 51
    '+'  shift, and go to state 26
    '-'  shift, and go to state 27

    TESTRELOP    go to state 52
    TESTEXPR1OP  go to state 53


State 45

   38 TESTNOT: '!' TESTNOT .

    $default  reduce using rule 38 (TESTNOT)


State 46

   10 STRATTEST: $@1 '/' TEST $@2 . '?' STRATSELECT STRATTESTELSE ';'

    '?'  shift, and go to state 65


State 47

   34 TESTOR: TESTOR '|' . TESTAND

    PARAMNAME  shift, and go to state 21
    VALDOUBLE  shift, and go to state 22
    VALINT     shift, and go to state 23
    '('        shift, and go to state 24
    '!'        shift, and go to state 25
    '+'        shift, and go to state 26
    '-'        shift, and go to state 27

    TESTAND      go to state 66
    TESTNOT      go to state 31
    TESTREL      go to state 32
    TESTEXPR1    go to state 33
    TESTEXPR1OP  go to state 34
    TESTEXPR2    go to state 35
    TESTEXPR3    go to state 36
    TESTEXPR4    go to state 37
    TESTVAL      go to state 38
    TESTVAR      go to state 39
    VALSDOUBLE   go to state 40
    VALSINT      go to state 41


State 48

   36 TESTAND: TESTAND '&' . TESTNOT

    PARAMNAME  shift, and go to state 21
    VALDOUBLE  shift, and go to state 22
    VALINT     shift, and go to state 23
    '('        shift, and go to state 24
    '!'        shift, and go to state 25
    '+'        shift, and go to state 26
    '-'        shift, and go to state 27

    TESTNOT      go to state 67
    TESTREL      go to state 32
    TESTEXPR1    go to state 33
    TESTEXPR1OP  go to state 34
    TESTEXPR2    go to state 35
    TESTEXPR3    go to state 36
    TESTEXPR4    go to state 37
    TESTVAL      go to state 38
    TESTVAR      go to state 39
    VALSDOUBLE   go to state 40
    VALSINT      go to state 41


State 49

   43 TESTRELOP: '=' .

    $default  reduce using rule 43 (TESTRELOP)


State 50

   42 TESTRELOP: '<' .

    $default  reduce using rule 42 (TESTRELOP)


State 51

   44 TESTRELOP: '>' .

    $default  reduce using rule 44 (TESTRELOP)


State 52

   41 TESTREL: TESTEXPR1 TESTRELOP . TESTEXPR1

    PARAMNAME  shift, and go to state 21
    VALDOUBLE  shift, and go to state 22
    VALINT     shift, and go to state 23
    '('        shift, and go to state 68
    '+'        shift, and go to state 26
    '-'        shift, and go to state 27

    TESTEXPR1    go to state 69
    TESTEXPR1OP  go to state 34
    TESTEXPR2    go to state 35
    TESTEXPR3    go to state 36
    TESTEXPR4    go to state 37
    TESTVAL      go to state 38
    TESTVAR      go to state 39
    VALSDOUBLE   go to state 40
    VALSINT      go to state 41


State 53

   45 TESTEXPR1: TESTEXPR1 TESTEXPR1OP . TESTEXPR2

    PARAMNAME  shift, and go to state 21
    VALDOUBLE  shift, and go to state 22
    VALINT     shift, and go to state 23
    '('        shift, and go to state 68
    '+'        shift, and go to state 26
    '-'        shift, and go to state 27

    TESTEXPR1OP  go to state 34
    TESTEXPR2    go to state 70
    TESTEXPR3    go to state 36
    TESTEXPR4    go to state 37
    TESTVAL      go to state 38
    TESTVAR      go to state 39
    VALSDOUBLE   go to state 40
    VALSINT      go to state 41


State 54

   61 VALSDOUBLE: TESTEXPR1OP VALDOUBLE .

    $default  reduce using rule 61 (VALSDOUBLE)


State 55

   63 VALSINT: TESTEXPR1OP VALINT .

    $default  reduce using rule 63 (VALSINT)


State 56

   51 TESTEXPR2OP: '*' .

    $default  reduce using rule 51 (TESTEXPR2OP)


State 57

   49 TESTEXPR2: TESTEXPR2 TESTEXPR2OP . TESTEXPR3

    PARAMNAME  shift, and go to state 21
    VALDOUBLE  shift, and go to state 22
    VALINT     shift, and go to state 23
    '('        shift, and go to state 68
    '+'        shift, and go to state 26
    '-'        shift, and go to state 27

    TESTEXPR1OP  go to state 34
    TESTEXPR3    go to state 71
    TESTEXPR4    go to state 37
    TESTVAL      go to state 38
    TESTVAR      go to state 39
    VALSDOUBLE   go to state 40
    VALSINT      go to state 41


State 58

   54 TESTEXPR3OP: '%' .

    $default  reduce using rule 54 (TESTEXPR3OP)


State 59

   52 TESTEXPR3: TESTEXPR3 TESTEXPR3OP . TESTEXPR4

    PARAMNAME  shift, and go to state 21
    VALDOUBLE  shift, and go to state 22
    VALINT     shift, and go to state 23
    '('        shift, and go to state 68
    '+'        shift, and go to state 26
    '-'        shift, and go to state 27

    TESTEXPR1OP  go to state 34
    TESTEXPR4    go to state 72
    TESTVAL      go to state 38
    TESTVAR      go to state 39
    VALSDOUBLE   go to state 40
    VALSINT      go to state 41


State 60

   25 PARAMPARAM: PARAMNAME . @6 '=' PARAMVAL

    $default  reduce using rule 24 (@6)

    @6  go to state 73


State 61

   20 METHODPARAM: $@4 '{' PARAMLIST . $@5 '}'
   22 PARAMLIST: PARAMLIST . ',' PARAMPARAM

    ','  shift, and go to state 74

    $default  reduce using rule 19 ($@5)

    $@5  go to state 75


State 62

   23 PARAMLIST: PARAMPARAM .

    $default  reduce using rule 23 (PARAMLIST)


State 63

   39 TESTNOT: '(' TESTOR ')' .

    $default  reduce using rule 39 (TESTNOT)


State 64

   55 TESTEXPR4: '(' TESTEXPR1 ')' .

    $default  reduce using rule 55 (TESTEXPR4)


State 65

   10 STRATTEST: $@1 '/' TEST $@2 '?' . STRATSELECT STRATTESTELSE ';'

    METHODNAME  shift, and go to state 1
    '('         shift, and go to state 2

    '/'       reduce using rule 8 ($@1)
    $default  reduce using rule 5 (STRATEMPTY)

    STRATSELECT  go to state 76
    STRATEMPTY   go to state 5
    STRATCONCAT  go to state 6
    STRATTEST    go to state 7
    $@1          go to state 8
    STRATGROUP   go to state 9
    STRATMETHOD  go to state 10


State 66

   34 TESTOR: TESTOR '|' TESTAND .
   36 TESTAND: TESTAND . '&' TESTNOT

    '&'  shift, and go to state 48

    $default  reduce using rule 34 (TESTOR)


State 67

   36 TESTAND: TESTAND '&' TESTNOT .

    $default  reduce using rule 36 (TESTAND)


State 68

   55 TESTEXPR4: '(' . TESTEXPR1 ')'

    PARAMNAME  shift, and go to state 21
    VALDOUBLE  shift, and go to state 22
    VALINT     shift, and go to state 23
    '('        shift, and go to state 68
    '+'        shift, and go to state 26
    '-'        shift, and go to state 27

    TESTEXPR1    go to state 77
    TESTEXPR1OP  go to state 34
    TESTEXPR2    go to state 35
    TESTEXPR3    go to state 36
    TESTEXPR4    go to state 37
    TESTVAL      go to state 38
    TESTVAR      go to state 39
    VALSDOUBLE   go to state 40
    VALSINT      go to state 41


State 69

   41 TESTREL: TESTEXPR1 TESTRELOP TESTEXPR1 .
   45 TESTEXPR1: TESTEXPR1 . TESTEXPR1OP TESTEXPR2

    '+'  shift, and go to state 26
    '-'  shift, and go to state 27

    $default  reduce using rule 41 (TESTREL)

    TESTEXPR1OP  go to state 53


State 70

   45 TESTEXPR1: TESTEXPR1 TESTEXPR1OP TESTEXPR2 .
   49 TESTEXPR2: TESTEXPR2 . TESTEXPR2OP TESTEXPR3

    '*'  shift, and go to state 56

    $default  reduce using rule 45 (TESTEXPR1)

    TESTEXPR2OP  go to state 57


State 71

   49 TESTEXPR2: TESTEXPR2 TESTEXPR2OP TESTEXPR3 .
   52 TESTEXPR3: TESTEXPR3 . TESTEXPR3OP TESTEXPR4

    '%'  shift, and go to state 58

    $default  reduce using rule 49 (TESTEXPR2)

    TESTEXPR3OP  go to state 59


State 72

   52 TESTEXPR3: TESTEXPR3 TESTEXPR3OP TESTEXPR4 .

    $default  reduce using rule 52 (TESTEXPR3)


State 73

   25 PARAMPARAM: PARAMNAME @6 . '=' PARAMVAL

    '='  shift, and go to state 78


State 74

   22 PARAMLIST: PARAMLIST ',' . PARAMPARAM

    PARAMNAME  shift, and go to state 60

    PARAMPARAM  go to state 79


State 75

   20 METHODPARAM: $@4 '{' PARAMLIST $@5 . '}'

    '}'  shift, and go to state 80


State 76

    2 STRATSELECT: STRATSELECT . '|' STRATEMPTY
   10 STRATTEST: $@1 '/' TEST $@2 '?' STRATSELECT . STRATTESTELSE ';'

    '|'  shift, and go to state 14
    ':'  shift, and go to state 81

    $default  reduce using rule 13 (STRATTESTELSE)

    STRATTESTELSE  go to state 82


State 77

   45 TESTEXPR1: TESTEXPR1 . TESTEXPR1OP TESTEXPR2
   55 TESTEXPR4: '(' TESTEXPR1 . ')'

    ')'  shift, and go to state 64
    '+'  shift, and go to state 26
    '-'  shift, and go to state 27

    TESTEXPR1OP  go to state 53


State 78

   25 PARAMPARAM: PARAMNAME @6 '=' . PARAMVAL

    error      shift, and go to state 83
    VALCASE    shift, and go to state 84
    VALDOUBLE  shift, and go to state 22
    VALINT     shift, and go to state 23
    VALSTRING  shift, and go to state 85
    '+'        shift, and go to state 26
    '-'        shift, and go to state 27

    METHODNAME  reduce using rule 30 (@7)
    '|'         reduce using rule 30 (@7)
    '/'         reduce using rule 30 (@7)
    '('         reduce using rule 30 (@7)
    '}'         reduce using rule 30 (@7)
    ','         reduce using rule 30 (@7)

    PARAMVAL     go to state 86
    @7           go to state 87
    TESTEXPR1OP  go to state 34
    VALSDOUBLE   go to state 88
    VALSINT      go to state 89


State 79

   22 PARAMLIST: PARAMLIST ',' PARAMPARAM .

    $default  reduce using rule 22 (PARAMLIST)


State 80

   20 METHODPARAM: $@4 '{' PARAMLIST $@5 '}' .

    $default  reduce using rule 20 (METHODPARAM)


State 81

   12 STRATTESTELSE: ':' . STRATSELECT

    METHODNAME  shift, and go to state 1
    '('         shift, and go to state 2

    '/'       reduce using rule 8 ($@1)
    $default  reduce using rule 5 (STRATEMPTY)

    STRATSELECT  go to state 90
    STRATEMPTY   go to state 5
    STRATCONCAT  go to state 6
    STRATTEST    go to state 7
    $@1          go to state 8
    STRATGROUP   go to state 9
    STRATMETHOD  go to state 10


State 82

   10 STRATTEST: $@1 '/' TEST $@2 '?' STRATSELECT STRATTESTELSE . ';'

    ';'  shift, and go to state 91


State 83

   32 PARAMVAL: error .

    $default  reduce using rule 32 (PARAMVAL)


State 84

   26 PARAMVAL: VALCASE .

    $default  reduce using rule 26 (PARAMVAL)


State 85

   29 PARAMVAL: VALSTRING .

    $default  reduce using rule 29 (PARAMVAL)


State 86

   25 PARAMPARAM: PARAMNAME @6 '=' PARAMVAL .

    $default  reduce using rule 25 (PARAMPARAM)


State 87

   31 PARAMVAL: @7 . STRATSELECT

    METHODNAME  shift, and go to state 1
    '('         shift, and go to state 2

    '/'       reduce using rule 8 ($@1)
    $default  reduce using rule 5 (STRATEMPTY)

    STRATSELECT  go to state 92
    STRATEMPTY   go to state 5
    STRATCONCAT  go to state 6
    STRATTEST    go to state 7
    $@1          go to state 8
    STRATGROUP   go to state 9
    STRATMETHOD  go to state 10


State 88

   27 PARAMVAL: VALSDOUBLE .

    $default  reduce using rule 27 (PARAMVAL)


State 89

   28 PARAMVAL: VALSINT .

    $default  reduce using rule 28 (PARAMVAL)


State 90

    2 STRATSELECT: STRATSELECT . '|' STRATEMPTY
   12 STRATTESTELSE: ':' STRATSELECT .

    '|'  shift, and go to state 14

    $default  reduce using rule 12 (STRATTESTELSE)


State 91

   10 STRATTEST: $@1 '/' TEST $@2 '?' STRATSELECT STRATTESTELSE ';' .

    $default  reduce using rule 10 (STRATTEST)


State 92

    2 STRATSELECT: STRATSELECT . '|' STRATEMPTY
   31 PARAMVAL: @7 STRATSELECT .

    '|'  shift, and go to state 14

    $default  reduce using rule 31 (PARAMVAL)
